k8/stage-prd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solution-backend
  namespace: common-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: solution-backend
  template:
    metadata:
      labels:
        app: solution-backend
    spec:
      containers:
        - name: solution-backend
          image: "_SERVICEIMG_"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            requests:
              memory: "1Gi"
              cpu: "1"
            limits:
              memory: "1Gi"
              cpu: "1"
          readinessProbe:
            httpGet:
              path: /api/swagger-ui.html
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
