k8/stage-prd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: solution-backend
  namespace: common-system
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: solution-backend
