k8/stage-prd/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtualservice-solution-backend
  namespace: common-system
spec:
  gateways:
    - istio-gateway
  hosts:
    - "_DOMAIN_"
  http:
    - match:
        - uri:
            prefix: /api/
      route:
        - destination:
            host: solution-backend
            port:
              number: 80
    - match:
        - uri:
            exact: /swagger-ui.html
      route:
        - destination:
            host: solution-backend
            port:
              number: 80
    - match:
        - uri:
            prefix: /swagger-ui/
      route:
        - destination:
            host: solution-backend
            port:
              number: 80
